# EasyLog

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/rsyslog/: apache-access.conf
src/syslog/: mod.rs
src/web/: apache.rs  mod.rs
templates/: apache.html  base.html  index.html
