[package]
name = "easylog"
version = "0.1.0"
edition = "2024"
description = "EasyLog — a log analyzer web service"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
socket2 = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
duckdb = { version = "1", features = ["bundled", "chrono"] }
syslog_loose = "0.21"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = "0.4"
tera = "1"

# Linux-only: raw SO_RCVBUFFORCE setsockopt to bypass net.core.rmem_max for the
# UDP receive buffer (see src/syslog/mod.rs). Not needed on other platforms.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
